--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 150px;
   padding-right: 5px;
+  align-items: center;
   &__input {
     width: 97%;
     margin: 1%;
